# PETTumorSegmentation

./: CMakeLists.txt  README.md
PETTumorSegmentation/: CMakeLists.txt  qSlicerPETTumorSegmentationModule.cxx  qSlicerPETTumorSegmentationModule.h
PETTumorSegmentation/Logic/: CMakeLists.txt  itkCenterNormalColumnBuilderFilter.h  itkCenterNormalColumnBuilderFilter.txx  itkCloneOSFGraphFilter.h  itkCloneOSFGraphFilter.txx  itkLOGISMOSOSFGraphSolverFilter.h  itkLOGISMOSOSFGraphSolverFilter.txx  itkMeshToOSFGraphFilter.h  itkMeshToOSFGraphFilter.txx  itkOSFGraph.h  itkOSFGraph.txx  itkOSFGraphSource.h  itkOSFGraphSource.txx  itkOSFGraphToMeshFilter.h  itkOSFGraphToMeshFilter.txx  itkOSFGraphToOSFGraphFilter.h  itkOSFGraphToOSFGraphFilter.txx  itkOSFSurface.h  itkOSFSurface.txx  itkSealingSegmentationMergerImageFilter.h  itkSealingSegmentationMergerImageFilter.txx  itkSimpleOSFGraphBuilderFilter.h  itkSimpleOSFGraphBuilderFilter.txx  itkWorkers.h  itkWorkers.txx  logismos_chunk_list.hxx  logismos_graph.cxx  logismos_graph.hxx  vtkSlicerPETTumorSegmentationLogic.cxx  vtkSlicerPETTumorSegmentationLogic.h
PETTumorSegmentation/MRML/: CMakeLists.txt  vtkMRMLPETTumorSegmentationParametersNode.cxx  vtkMRMLPETTumorSegmentationParametersNode.h
PETTumorSegmentation/Resources/: qSlicerPETTumorSegmentationModule.qrc
PETTumorSegmentation/Resources/UI/: qSlicerPETTumorSegmentationFooBarWidget.ui  qSlicerPETTumorSegmentationModuleWidget.ui
PETTumorSegmentationEffect/: CMakeLists.txt  PETTumorSegmentationEffect.py
SEPETTumorEffect/: AnatomicRegionAndModifier-DICOM-HeadAndNeckCancer.json  CMakeLists.txt  SegmentationCategoryTypeModifier-HeadAndNeckCancer.json
SegmentEditorPETTumorSegmentationEffect/: AnatomicRegionAndModifier-DICOM-HeadAndNeckCancer.json  CMakeLists.txt  CMakeLists.txt~  PETTumorSegmentationEditorEffect.py~  SegmentEditorEffects.__init__.py.in~  SegmentEditorPETTumor.py  SegmentEditorPETTumor.py~  SegmentEditorPETTumorSegmentationEffect.py~  SegmentationCategoryTypeModifier-HeadAndNeckCancer.json
Testing/: CMakeLists.txt  SEPETTumorEffectSelfTest.py  SegmentEditorPETTumorSegmentationEffectSelfTest.py
